<resources>
    <string name="app_name">TypeRacer</string>

    <string name="last">Last</string>
    <string name="top">Top</string>
    <string name="my">My</string>
    <string name="name">name</string>
    <string name="avg_wpm">avg. wpm</string>
    <string name="last_played_time">last played time</string>
    <string name="wpm">wpm</string>
    <string name="time">time</string>
    <string name="error_msg">Something went wrong please try again later</string>
    <string name="history">history</string>
    <string name="type_race">type race</string>
    <string name="push">push</string>
    <string name="start">Start</string>
    <string name="log_in_ore_create_if_does_not_exists">Log In ore create if does not exists</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login_or_register">login or register</string>
    <string name="password_requirements">Password must have at least 6 characters and contain upper case, lower case</string>
    <string name="password_can_not_be_empty">You must fill password field</string>
    <string name="log_in_failed">Log in failed</string>
    <string name="registration_failed">Registration failed</string>

    <!--    profile screen -->
    <string name="my_profile">my profile</string>
    <string name="log_out">log out</string>
    <string name="display_name">display name</string>

    <!--    finish dialog-->
    <string name="finish_dialog_title">You are finish!</string>
    <string name="finish_dialog_subtitle">WPM score is %1$f</string>
    <string name="finish_dialog_message">Do you wont save it?</string>
    <string name="save">Save</string>

    <!--    timeout dialog-->
    <string name="timeout_dialog_title">Timeout!</string>
    <string name="timeout_dialog_subtitle">Max. time (%1$s) limit reached</string>
    <string name="timeout_dialog_message">Don\'t worry, try again</string>

    <!--    date format-->
    <string name="week_ago">one week ago</string>
    <string name="days_ago">%1$d days ago</string>
    <string name="hours_ago">%1$d hours ago</string>
    <string name="min_ago">%1$d min ago</string>
    <string name="hour">hour</string>
    <string name="hours">hours</string>
    <string name="minutes_ago">%1$d minutes ago</string>
    <string name="seconds_ago">%1$d seconds ago</string>
    <string name="invalid_date">invalid date</string>

</resources>
