<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.example.typeracer.viewModel.ProfileVM" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragment.ProfileFragment">

        <ImageView
            android:id="@+id/profile_image"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_100sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:contentDescription="@string/my_profile"
            android:src="@drawable/ic_nav_profile"
            android:tint="@color/colorAccent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/display_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:text="@{viewModel.profileName}"
            android:textColor="@color/colorSecondary"
            android:textSize="@dimen/_16ssp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_image" />

        <TextView
            android:id="@+id/display_name_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:text="@string/display_name"
            android:textColor="@color/colorSecondary"
            android:textSize="@dimen/_10ssp"
            app:layout_constraintStart_toStartOf="@+id/display_name"
            app:layout_constraintTop_toBottomOf="@+id/display_name" />

        <TextView
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp"
            android:text="@{viewModel.profileEmail}"
            android:textColor="@color/colorSecondary"
            android:textSize="@dimen/_14ssp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/display_name_hint"
            app:layout_constraintTop_toBottomOf="@+id/display_name_hint" />

        <TextView
            android:id="@+id/email_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:text="@string/email"
            android:textColor="@color/colorSecondary"
            android:textSize="@dimen/_10ssp"
            app:layout_constraintStart_toStartOf="@+id/email"
            app:layout_constraintTop_toBottomOf="@+id/email" />

        <Button
            android:id="@+id/button"
            style="@style/AppTheme.Button"
            android:layout_width="@dimen/_72sdp"
            android:layout_height="@dimen/_32sdp"
            android:layout_marginTop="@dimen/_30sdp"
            android:onClick="@{() -> viewModel.logOut()}"
            android:text="@string/log_out"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email_hint" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>